k8s/namespaces/base/game-servers/enemy-territory/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enemy-territory
  namespace: game-servers
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - et.raspbernetes.com
      secretName: et.raspbernetes.com-ingress-cert
  ingressClassName: nginx
  rules:
    - host: et.raspbernetes.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: enemy-territory
                port:
                  number: 27960
