k8s/namespaces/base/game-servers/enemy-territory/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: enemy-territory
  namespace: game-servers
  annotations:
    external-dns.alpha.kubernetes.io/target: '${CLUSTER_DOMAIN}'
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  hosts:
    - 'et.${CLUSTER_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: '/'
      route:
        - destination:
            port:
              number: 27960
            host: enemy-territory.game-servers.svc.cluster.local
